# TOW

./: .gitignore  Makefile  readme.md
fortran/: Makefile  resolve_deps.py
fortran/01_dates_and_calendars/: README.md
fortran/01_dates_and_calendars/badluk/: Makefile
fortran/01_dates_and_calendars/caldat/: Makefile
fortran/01_dates_and_calendars/flmoon/: Makefile
fortran/01_dates_and_calendars/julday/: Makefile
fortran/02_linear_algebra/: README.md
fortran/02_linear_algebra/gaussj/: Makefile
fortran/02_linear_algebra/lubksb/: Makefile
fortran/02_linear_algebra/ludcmp/: Makefile
fortran/02_linear_algebra/mprove/: Makefile
fortran/02_linear_algebra/sparse/: Makefile
fortran/02_linear_algebra/svbksb/: Makefile
fortran/02_linear_algebra/svdcmp/: Makefile
fortran/02_linear_algebra/toeplz/: Makefile
fortran/02_linear_algebra/tridag/: Makefile
fortran/02_linear_algebra/vander/: Makefile
fortran/03_interpolation/: README.md
fortran/03_interpolation/bcucof/: Makefile
fortran/03_interpolation/bcuint/: Makefile
fortran/03_interpolation/hunt/: Makefile
fortran/03_interpolation/locate/: Makefile
fortran/03_interpolation/polcoe/: Makefile
fortran/03_interpolation/polcof/: Makefile
fortran/03_interpolation/polin2/: Makefile
fortran/03_interpolation/polint/: Makefile
fortran/04_integration/: README.md
fortran/05_evaluation_of_functions/: README.md
fortran/06_special_functions/: README.md
fortran/07_random_numbers/: README.md
fortran/08_sorting/: README.md
fortran/09_root_finding/: README.md
fortran/10_optimization/: README.md
fortran/11_eigensystems/: README.md
fortran/12_fourier_transform/: README.md
fortran/13_spectral_analysis/: README.md
fortran/14_statistics/: README.md
fortran/15_curve_fitting/: README.md
fortran/16_ode_integration/: README.md
fortran/17_boundary_value_problems/: README.md
fortran/19_partial_differential_equations/: README.md
matarized/: generate_conversion_plans.py
matarized/11_eigensystems/balanc/: CMakeLists.txt  CONVERSION_PLAN.md  balanc.hpp  main.cpp
matarized/19_partial_differential_equations/sor/step1_matar_serial/: CMakeLists.txt  sor.cpp
(+984 files in other folders)
